flag-service/k8s/namespace-flag.yml
apiVersion: v1
kind: Namespace
metadata:
  name: flag
  labels:
    application: flag
