flag-service/k8s/deployment-flag.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: flag
  labels:
    app: flag-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      containers:
        - name: flag-service
          # Troque pela sua imagem no registry (ex.: ECR)
          image: flag-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 15
            periodSeconds: 20
