flag-service/k8s/service-flag.yml
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: flag
spec:
  selector:
    app: flag-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
  type: ClusterIP
